samples/_failures_safe/1761041896_9b61fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f722f8f.c: In function ‘main’:
./samples/SAFE/__tmp_2f722f8f.c:186:20: error: missing terminating " character
  186 |             printf("State
      |                    ^~~~~~
./samples/SAFE/__tmp_2f722f8f.c:186:13: error: expected expression at end of input
  186 |             printf("State
      |             ^~~~~~
./samples/SAFE/__tmp_2f722f8f.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f722f8f.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f722f8f.c:186:13: error: expected declaration or statement at end of input
